--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,18 @@
 
    <artifactId>pdfbox-carriage</artifactId>
    <version>1.1.1-SNAPSHOT</version>
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+               <source>11</source>
+               <target>11</target>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
 
    <parent>
       <groupId>io.konik</groupId>
@@ -34,13 +46,13 @@
       <dependency>
          <groupId>org.apache.pdfbox</groupId>
          <artifactId>pdfbox</artifactId>
-         <version>2.0.15</version>
+         <version>3.0.2</version>
       </dependency>
 
       <dependency>
          <groupId>org.apache.pdfbox</groupId>
          <artifactId>xmpbox</artifactId>
-         <version>2.0.13</version>
+         <version>3.0.2</version>
       </dependency>
 
       <!-- Optional DI -->
@@ -76,6 +88,12 @@
          <groupId>org.openjdk.jmh</groupId>
          <artifactId>jmh-generator-annprocess</artifactId>
          <scope>provided</scope>
+      </dependency>
+      <dependency>
+         <groupId>javax.annotation</groupId>
+         <artifactId>javax.annotation-api</artifactId>
+         <scope>test</scope>
+         <version>1.3.2</version>
       </dependency>
    </dependencies>
    
